--- a/2025/Cargo.toml
+++ b/2025/Cargo.toml
@@ -26,5 +26,9 @@ name = "day06"
 path = "day06/main.rs"
 
 [[bin]]
+name = "day07"
+path = "day07/main.rs"
+
+[[bin]]
 name = "day08"
 path = "day08/main.rs"
