--- a/2025/Cargo.toml
+++ b/2025/Cargo.toml
@@ -18,6 +18,10 @@ name = "day03"
 path = "day03/main.rs"
 
 [[bin]]
+name = "day04"
+path = "day04/main.rs"
+
+[[bin]]
 name = "day05"
 path = "day05/main.rs"
 
